@@ -8,6 +8,20 @@
     </parent>
     <artifactId>MagicMovie</artifactId>
     <packaging>jar</packaging>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.3</version>
+                <configuration>
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
@@ -23,6 +37,7 @@
     <properties>
         <maven.compiler.source>19</maven.compiler.source>
         <maven.compiler.target>19</maven.compiler.target>
-        <exec.mainClass>hr.stig.app.login.LoginForm</exec.mainClass>
+        <exec.mainClass>hr.stig.app.view.LoginForm</exec.mainClass>
+        <!--<exec.mainClass>hr.stig.app.view.MainAplikacija</exec.mainClass>-->
     </properties>
 </project>
